--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -7,10 +7,9 @@
   <meta name="renderer" content="webkit">
   <meta name="description" content="">
   <meta name="keyword" content="">
-  <title></title>
-  <link rel="stylesheet" href="example.css">
+  <title>ANT-VIEW</title>
 </head>
 <body>
-<script src="example.js"></script>
+<div id="app"></div>
 </body>
 </html>
